# ndock

./: .env  .env.example  .gitignore  Cargo.toml  README.md  dev_start.sh  dev_stop.sh  docker-compose-develop.yml  main.py  main.sh  memo  ndock.yml  requirements.txt  settings.yaml  t1.yaml  t2.yaml  test.yaml  test2.yaml
buildconf/nginx/: default.conf
buildconf/php/: Dockerfile  php.ini-production
docker/: cs_main.sh  cs_master.sh  cs_staging.sh  default.yaml  main.yaml  main.yml  staging.yaml
docker/images/express/: Dockerfile
docker/images/nginx/: default copy.conf  default.conf  main.conf
docker/images/php/: Dockerfile
docker/images/php-apache/: main.Dockerfile  php.ini.main
docker/images/php-fpm/: Dockerfile  docker.conf  main.Dockerfile
docker/images/python/: Dockerfile  entrypoint.sh
docker/images/rust/: entrypoint.sh
docker/services/mysql/: mysql.yaml
docker/services/nginx/: nginx.yaml
docker/services/php-apache/: Dockerfile
docker/settings/: main.yml  staging.yml
docker_settings/: cs_main.sh  cs_master.sh  cs_staging.sh  main.yaml  master.yaml
ndock/: Dockerfile  NDock.py  ndock.yaml  ndock.yml
ndock/classes/: Color.py  DockerMain.py  DockerNDock.py  Git.py  JSON.py  Loader.py  NDock.py  Parser.py
ndock/settings/: allow_commands.json  commands.json  envs.json  paths.json
ndock_lib/: Cargo.toml
ndock_lib/src/: arg_parser.rs  commands.rs  docker.rs  env_parser.rs  lib.rs  ndock.rs  time.rs  yaml_parser.rs
ndock_lib/src/envs/: any.rs  main.rs  master.rs  mod.rs  staging.rs
src/: main copy.rs  main.rs
(+33 files in other folders)
