[package]
authors = ["n0pj <admin@n0pj.com>"]
edition = "2018"
name = "ndock"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "2.33.3"
ndock_lib = {path = "ndock_lib"}

[workspace]
members = [
  "ndock_lib",
]
