[package]
authors = ["n0pj <admin@n0pj.com>"]
edition = "2018"
name = "ndock_lib"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
colored = "2.0.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
eval = "0.4.3"
regex = "1.4.3"
serde = "1.0.123"
serde_yaml = "0.8.15"
